bk_ida/gccida/g0/c_expand_start_cond
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:749:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0 = ( if_elt *)xrealloc( if_stack_0, 32LL * if_stack_space); 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:749:35: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0 = ( if_elt *)xrealloc( if_stack_0, 32LL * if_stack_space); 
                                  ^~~~~~~~~~
                                  if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:755:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0 = ( if_elt *)xmalloc( 0x140uLL); 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:759:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer].compstmt_count = compstmt_count; 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:760:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer].file = input_filename; 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:761:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer].line = lineno; 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:762:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer].needs_warning = 0; 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:763:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer++].if_stmt = if_stmt; 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/c_expand_start_cond/src/obj/c-common.o] Error 1
